Updated some stuff using soon-to-be-obsolete Java stuff, which hardly anyone else would touch